 * Added `.alt` attribute to image renditions
 * The default `src`, `width`, `height` and `alt` attributes can now be overridden by attributes passed to the `{% image %}` tag
 * Added keyboard shortcuts for preview and save in the page editor
 * Fix: HTTP cache purge now works again on Python 2 (Mitchel Cabuloy)
 * Fix: Locked pages can no longer be unpublished (Alex Bridge)

1.2 (12.11.2015)
~~~~~~~~~~~~~~~~

 * Added `wagtail.contrib.settings`, a module to allow administrators to edit site-specific settings
 * Core templatetags (pageurl, image, wagtailuserbar, etc) are now compatible with Jinja2
 * Redirects can now be created for specific sites
 * The Page.get_latest_revision_as_page method now returns the live page object if there are no draft changes to the page
 * Image and document models now provide a `search` method on their QuerySets
 * Search methods now accept an `operator` argument to determine whether multiple terms are ORed or ANDed together
 * Search methods now accept an `order_by_relevance` argument, which can be set to False to preserve the original QuerySet ordering
 * InlinePanel now accepts `max_num` and `min_num` arguments to limit the number of inline items
 * 'Add' button on inline panels is disabled when `max_num` is reached (Salvador Faria)
 * StreamField blocks now provide a `get_context` method for passing additional variables to the block template
 * Wagtail API now incorporates the browsable front-end provided by Django REST Framework
 * Python 3.5 support
 * WagtailRedirectMiddleware can now ignore the query string if there is no redirect that exactly matches it (Michael Cordover)
 * Order of URL parameters now ignored by redirect middleware (Michael Cordover)
 * Added SQL Server compatibility to image migration (Timothy Allen)
 * Added classnames to Wagtail rich text editor buttons to aid custom styling (Rob Shelton)
 * Simplified body_class in default homepage template (Josh Barr)